--- a/_posts/thesis_chapters/2025-6-6-Gdps_v1.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v1.md
@@ -116,12 +116,20 @@ https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/
 <!-- **On GDP as a germ-cell and unit of analysis recap of design patterns** -->
 <!-- In the introduction of this thesis, I outlined some of the broader challenges of sharing practice and research to practically support the learning of coding practices beyond the immediate context of the research in question. The choice of what scope of activity to examine in detail is relevant to this challenge.  -->
 
-Software design patterns are a grouping of a description of target project behaviour, with a suggested community solution of code structure often accompanied with worked examples (see Chapter 2). While existing research explores the use of game design patterns in educational settings, for instance to aid the transfer of science simulation concepts to other contexts [@repenning_scalable_2015; @basawapatna_using_2010] or as a foundation for co-design work [@eriksson_using_2019], there is limited work addressing their role in overcoming challenges faced by emerging communities of game creators using text coding. In the previous chapter, I outlined the evolution of tool use, emphasising emerging tensions in activity. The importance of gameplay design patterns (GDPs) emerged from participant input in P1 and were then integrated by myself into various forms of scaffolding within and graded step of practice including: quick-start activities, instructional tutorials, and code snippet examples. This chapter shifts focus to the perspectives of participants, using recorded data to interpret their varied uses and adaptations of GDP use. In doing so, it addresses the research question: How does CHAT theory help us understand how game design patterns can be used in an evolving community of novice game makers?  
 
+In the previous chapter, I outlined the evolution of tool use, emphasising emerging tensions in activity. The importance of gameplay design patterns (GDPs) emerged from participant input in P1 and were then integrated by myself into various forms of scaffolding within and graded step of practice including: quick-start activities, instructional tutorials, and code snippet examples. This chapter shifts focus to the perspectives of participants, using recorded data to interpret their varied uses and adaptations of GDP use. In doing so, it addresses RQ2:  How can the use of a collection of game design patterns support CGD&P, in particular in relation to abstract and concrete dimensions of existing pedagogies??  
 
-While much research on teaching coding addresses the benefits of collaborative approaches (see Chapter 2), fewer studies outline strategies to facilitate joint attention [@brennan_scratch-ed_2009]. Thus, it potentially fruitful to align relevant uses of GDPs to existing research on the development of shared language to support joint work and guided participation [@stahl_computer-supported_2006]. Returning to Kynigos's interpretation of the half-baked game as a boundary object facilitating communication [@kynigos_half-baked_2007], we GDP concept themselves can also been seen a _boundary objects_ at a greater level of granularity. The work of Stahl and others [@stahl_computer-supported_2006] within the fields of technology use and collaborative learning is relevant here to highlight the importance of language development and the intersubjective interpretation of visual prototypes and gestures as tools in building mutual understanding in the kind of _joint problem space_ we see in this study.   
+**Set out path of chapter, here at start?**
 
 I describe the use of GDPs as diverse mediational strategies to overcome some of the tensions explored in the previous chapter, not only addressing the use of facilitator-provided resources but also as part of emerging community practices and interpersonal repertoires.
+
+A discussion section explores the implications of these findings in relation to existing research and theoretical concepts.
+
+**Redifining terms - and why design patterns?**
+
+Software design patterns are a grouping of a description of target project behaviour, with a suggested community solution of code structure often accompanied with worked examples (see Chapter 2). While existing research explores the use of game design patterns in educational settings, for instance to aid the transfer of science simulation concepts to other contexts [@repenning_scalable_2015; @basawapatna_using_2010] or as a foundation for co-design work [@eriksson_using_2019], there is limited work addressing their role in overcoming challenges faced by emerging communities of game creators using text coding.
+
+While much research on teaching coding addresses the benefits of collaborative approaches (see Chapter 2), fewer studies outline strategies to facilitate joint attention [@brennan_scratch-ed_2009]. Thus, it potentially fruitful to align relevant uses of GDPs to existing research on the development of shared language to support joint work and guided participation [@stahl_computer-supported_2006]. Returning to Kynigos's interpretation of the half-baked game as a boundary object facilitating communication [@kynigos_half-baked_2007], we GDP concept themselves can also been seen a _boundary objects_ at a greater level of granularity. The work of Stahl and others [@stahl_computer-supported_2006] within the fields of technology use and collaborative learning is relevant here to highlight the importance of language development and the intersubjective interpretation of visual prototypes and gestures as tools in building mutual understanding in the kind of _joint problem space_ we see in this study.   
 
 
 
@@ -140,11 +148,11 @@ I describe the use of GDPs as diverse mediational strategies to overcome some of
 
 Table 6.1: Summary of varied GDP use within the activity of this research
 
-The above table summarises the principal different uses of GDPs in the data analysed.  In this table and the structure of this chapter, I employ Rogoff's three planes of analysis [@rogoff_observing_1995], as introduced in Chapter Four. This chapter’s sections examine how gameplay design patterns are utilised broadly by parents, children and facilitators, each through the lens of a respective analytical plane. Recognising that these observations do not neatly align with the three planes, I discuss the use of GDPs across cultural activities, interpersonal activity and personal knowledge in three distinct sections.
+The above table summarises the principal different uses of GDPs as a germ cell of the different scopes of activity in the data analysed. DOES THIS NEED RE-EXPLAINING?
+
+In this table and the structure of this chapter, I employ Rogoff's three planes of analysis [@rogoff_observing_1995], as introduced in Chapter Four. This chapter’s sections examine how gameplay design patterns are utilised broadly by parents, children and facilitators, each through the lens of a respective analytical plane. Recognising that these observations do not neatly align with the three planes, I discuss the use of GDPs across cultural activities, interpersonal activity and personal knowledge in three distinct sections [^3p].
 
 <!-- INCLUDE A MERGED DIAGRAM IF THIS IS REALLY HELPFUL BELOW. -->
-
-An analogy can be drawn between these three planes of analysis and the examination of activity systems at varying scopes. Specifically, the cultural plane aligns with the community scope of activity described in Figure 5.x in the previous chapter, while the interpersonal and personal planes correspond to smaller scopes depicted in Figure 5.x. A discussion section explores the implications of these findings in relation to existing research and theoretical concepts.
 
 <!--
 _extending the use of GDPs beyond the initial use to diverse mediational uses and component parts of emerging making repertoires & Identifying GDPs as a germ cell/ unit of analysis_ -->
@@ -230,9 +238,11 @@ PULL OUT AN EXAMPLE -->
 
 <!-- To avoid duplication with community processes and given the overall focus on social and cultural domains in thesis given the deficit in this aspect compared to studies exploring , this section follows -->
 
-Personal appropriation is described in of Kafai and Burke's [-@kafai_constructionist_2015, p.4] review of CGD&P  as "knowledge appropriation and transformation that is instantiated in the process of making games". Rogoff's interpretation of personal appropriation is more complex communicating the bi-directional nature of the process where individual interpretations of community gained knowledge is remediated and fed back into the community. In this informal learning context, the overall motivation of participants was on making an engaging game rather than explicitly developing to knowledge linked to the computing curriculum. Despite this, the evolving design process resulted in activities which did allow the exploration of computational thinking, systems concepts and other computing concepts and proceedures.
 
-Kafai and Burke's review [-@kafai_constructionist_2015] notes the greater number of studies focus on personal dimensions of learning programming and curricular knowledge compared to the deficit regarding social and cultural aspects. To reflect the greater coverage of this area of research, this section is focused on limited aspects of personal appropriation: namely the code patching, debugging and the development of digital literacy skills. I have chose these areas as there were a subject of several observations provoked by the characteristics of the learning design of this research.
+Kafai and Burke's review [-@kafai_constructionist_2015] notes the greater number of studies focus on personal dimensions of learning programming and curricular knowledge compared to the deficit regarding social and cultural aspects. Personal appropriation is described in of Kafai and Burke's [-@kafai_constructionist_2015, p.4] review of CGD&P  as "knowledge appropriation and transformation that is instantiated in the process of making games". Rogoff's interpretation of personal appropriation is more complex communicating the bi-directional nature of the process where individual interpretations of community gained knowledge is remediated and fed back into the community. In this informal learning context, the overall motivation of participants was on making an engaging game rather than explicitly developing to knowledge linked to the computing curriculum. Despite this, the evolving design process resulted in activities which did allow the exploration of computational thinking, systems concepts and other computing concepts and procedures.
+
+To acknowledging the broad coverage of existing research covering this aspect of CGD&P,  this section aims to contribute through a narrow focus on limited aspects of personal appropriation: namely the code patching, debugging and the development of digital literacy skills. I have chose these areas as there were a subject of several observations provoked by the characteristics of the learning design of this research.
+
 
 <!-- Specifically there was no testing involved and the interview focus was on socio-cultural aspects.  -->
 
@@ -246,7 +256,7 @@ I was inspired by the the process and rationale of Bevan and Petrich's [-@bevan_
 | Abstraction | Sequences | Systems Elements      | Goal Setting        |
 | Decomposition | Variables      | Systems Dynamics  | Being Incremental and Iterative       |
 | Pattern Recognition | Logic | Reinforcing Feedback Loops      | Developing Vocabulary        |
-| Algorithmic Thinking | Loops | Balancing Feedback Loops      | Web Literacy    |
+| Algorithmic Thinking | Loops | Balancing Feedback Loops      | Web Literacy (as a subset of digital literacy)  [^moz] |
 |  | Arrays |       | Code patching       |
 | | Creating Functions |       | Version Control    |
 | | Change Listener |    | Debugging   |
@@ -270,8 +280,12 @@ Table 6.x. Learning Dimensions of the 3M Game Making Model -->
 <!-- NOTE - this map focuses on more concrete concepts,  -->
 
 
-The map of learning dimensions above includes a balance of skills, concrete and more abstract aspects of coding concepts (Appendix.learningmap explores in more detail the evolution of this map). It aims to address tensions in the integration of concepts into an informal context, specifically, a tension or paradox common in project-based approaches in more formal settings, between the an exploratory learning approach and a possibility or need to align with curricular concepts [@hoyles_pedagogy_1992]. I propose that the play paradox [@hoyles_pedagogy_1992] is addressed by orienting the leading/motivational activity of the learning design to be one aligned with the underlying goals of the participants. In this case to add features to their game. I return to this subject in Chapter 7.
+The map of learning dimensions above includes a balance of skills, concrete and more abstract aspects of coding concepts (Appendix.learningmap explores in more detail the evolution of this map). It aims to address tensions in the integration of concepts into an informal context, specifically, a tension or paradox common in project-based approaches in more formal settings, between the an exploratory learning approach and a possibility or need to align with curricular concepts [@hoyles_pedagogy_1992]. I propose that the play paradox [@hoyles_pedagogy_1992] is addressed by orienting the leading/motivational activity of the learning design to be one aligned with the underlying goals of the participants. In this case to add features to their game.
 
+DEVELOP THIS -  
+For example, In Vignette 5, the goal is to get the image created into the game.
+
+<!-- I return to this subject in Chapter 7.  -->
 <!-- RETURN TO THIS TO REPRESENT SOME OF THE CHALLENGES AND DIFFICULTY OF SWIMMING AGAINST THE STREAM IN TERMS OF COMMODIFICIATION OF TOOLS -->
 
 <!-- One area in particular stand out: code patching technique and debugging types of coding errors. This is chosen as an under-researched inclusive practice which merits further investigation (include in Chapter 2). -->
@@ -285,7 +299,12 @@ A summary of a book chapter [@chesterman_game_2023] exploring these issues with 
 
 ### The interrelationship of GDPs and the development of personal appropriation of skills and processes
 
-It is of value to compare the observational process of creating the learning map to the more intentional, concept-driven design approach described in research on Microworlds, which foregrounds the role of learning designers in shaping the affordances of (playful) learning environments to steer learners toward exploring curricular concepts.  In much of the Microworlds research, these are often scientific or mathematical concepts: take, for example, geometry in Turtle computing with the LOGO language [@ernest_whats_1988]. This design has used several structural constructionist techniques involved in designing Microworlds [@laurillard2020significance], however, as the principal motivation of this study is acculturation within a game-making community, my focus has prioritised procedural skills that facilitate community participation over underlying subject related concepts. Due to limited scope of this section I prioritise an analysis here of the technical practices of web literacy,code patching and debugging. In addition to the use of new techniques being  driven by the implementation of GDPs, the following observations reveal a complex, interdependent relationship between GDP concepts and emergent technical processes.
+MOVE LATER AFTER EVIDENCE. OR UP TO PREVIOUS.  
+It is of value to compare the observational process of creating the learning map to the more intentional, concept-driven design approach described in research on Microworlds, which foregrounds the role of learning designers in shaping the affordances of (playful) learning environments to steer learners toward exploring curricular concepts.
+
+In much of the Microworlds research, these are often scientific or mathematical concepts: take, for example, geometry in Turtle computing with the LOGO language [@ernest_whats_1988]. This design has used several structural constructionist techniques involved in designing Microworlds [@laurillard2020significance], however, as the principal motivation of this study is acculturation within a game-making community, my focus has prioritised procedural skills that facilitate community participation over underlying subject related concepts.
+
+Due to limited scope of this section I prioritise an analysis here of the technical practices of web literacy,code patching and debugging. In addition to the use of new techniques being  driven by the implementation of GDPs, the following observations reveal a complex, interdependent relationship between GDP concepts and emergent technical processes.
 
 <!-- While the above learning map is relevant to the overall process of game making. The main focus of this chapter is the exploration of diverse uses of GDPs within this activity, as such I now explore the motivational and mediational uses of GDPs in this personal plane.  -->
 <!-- These processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation, or informal interactions between peers. The following observations illustrate how introduced processes were adapted and modified by the community. -->
@@ -310,15 +329,22 @@ In this process, GDPs functioned as both a motivational and conceptual tools fac
     Madiha(p): I know what export means!
     Nasrin(c): Ok then smartie pants.
 
-The implementation of Madiha(p) chosen GDPs drives the development of these technical processes, as she must either learn them herself or draw on peer knowledge to complete the task. She is clearly invested in her creative products, so much so that a fellow parent highlights out the process to saving images.
-
 In another example, changing pen colours in the graphical tool is a process that Nasrin(c) has already internalised and performs effortlessly, whereas Madiha(p) is still deliberately working to build her competency. Nasrin(p) has fully operationalised the process, incorporating it into her repertoire of practices.
+
+The implementation of Madiha(p) chosen GDPs drives the development of these technical processes, as she must either learn them herself or draw on peer knowledge to complete the task. She is clearly invested in her creative products, so much so that a fellow parent highlights out the process to saving images. She knows what must be done, guiding her daughter through the stages of save then, but lacks the procedural knowledge to carry it out.
+
+
+
+
 
 <!-- Similarly, in section V5.d, Madiha receives help from a peer, Ed, in using the cropping tool to remove redundant space at the edges of sprite characters after he playtests her game. -->
 
 **Code Patching as a guided technical process and the use of GDPs to nurture tactical responses to coding errors**
 
-GDPs also functioned a container for structured project stages, facilitating the initial use of procedures as illustrated in this section using the example of code patching. Code patching is a professional technical process to scaffold the application of new features in computer programming (see Glossary and Chapter 2). This patching process became an important element of documentation. Although code was provided, mistakes occurred in practice and additional customisations were introduced. Video evidence and observational journal notes highlight the potential of coupling code implementation with target behaviour, structured within a framework of GDPs. The following extract from Vignette 1 shows an example of code patching in practice.  This vignette extract is included to show both the technical process of code patching explored here and the process of accessing documentation covered in the following section on guided participation.
+GDPs also functioned a container for structured project stages, facilitating the initial use of procedures as illustrated in this section using the example of code patching. Code patching is a professional technical process to scaffold the application of new features in computer programming (see Glossary and Chapter 2). This patching process became an important element of documentation. Although code was provided, mistakes occurred in practice and additional customisations were introduced. Video evidence and observational journal notes highlight the potential of coupling code implementation with target behaviour, structured within a framework of GDPs.
+
+DROP THIS - HOW DO DO IT? 
+The following extract from Vignette 1 shows an example of code patching in practice.  This vignette extract is included to show both the technical process of code patching explored here and the process of accessing documentation covered in the following section on guided participation.
 
 INSERT SHORTER VIGNETTE HERE. ADD ONE WITH TIMED DETAIL?
 
@@ -806,12 +832,11 @@ LINK TO EXPLORATION OF COMPLEX OBJECT BELOW?
 
 ### Expanded object in terms of motivation - fluency towards agency
 
-3GAT guides researchers to describe expansions of the object of activity.
+<!-- , a process starting from a point of facilitating a collaborative learning environment. While collaboration was certainly important, it did not summarise my motivations well. -->
 
-THIS ISN'T CLEAR -
-Given the complexity of the object being worked on in this research, and complex nature of the emerging activity, [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic], it is not surprising that a diversity of conceptualisations of what experience or attribute is being developed in participant in CGD&P or similar digital making.
+<!-- [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic],  -->
 
-The discussion in Chapter 5 outlined an extensive reflection my motivations in the changing design, a process starting from a point of facilitating a collaborative learning environment. While collaboration was certainly important, it did not summarise my motivations well.
+3GAT guides researchers to describe expansions of the object of activity. Part of the expansion  of the complex object of activity []@cormier2008rhizomatic], encompasses the underlying motivation of the activity. Chapter 5 began to address the motivations of myself and participants in the changing design. Existing research shows a diversity of conceptualisations of what experience or attribute is being developed in participant in CGD&P or similar digital making.
 
 Turning to existing literature for explorations of motivations driving CGD&P and similar areas, a strand grouped around different forms of technical fluency [@papert_technological_1995] was explored in Chapter 2 with common features of domain proficiency, self-expression and identity formation and an experience of flow.
 
@@ -819,13 +844,11 @@ One of the motivational factors guiding the evolution of the learning design of 
 
 <!-- , and to surface additional socio-cultural concepts useful for an enriched understanding of processes as play.   -->
 
-
-
 Observations of participant design behaviour did not align with common design thinking concepts or design cycle frameworks advocated in CGD&P [@resnick_all_2007; @winarno_steps_2020-1; @dam_5_2024]. The stages were instead fragmented and sometimes happened in parallel. In many interactions, I observed improvisational approaches which incorporated ideation, planning, implementation, and testing in the space of a minute or so. Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Above Toby's increased navigational proficiency was interpreted as  transformation of actions into more fluent operations [@leontiev_activity_2009].
 
 Clive (p) quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint improvisation created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
 
-Extending Basawapatna and colleagues [-[@basawapatna_zones_2013]] approach to support  flow SOCIAL FLOW? (see Chapter 2 - DROPPED) via just in time documentation aligned with participants goal to support participant engagement, adding greater specificity and choice over which game patterns participants implement. This adaptation help greater alignment with research on the interdependence of flow experience and possibilities for social identity development [@mao_optimal_2016].
+Extending Basawapatna and colleagues [-[@basawapatna_zones_2013]] approach to support  flow SOCIAL FLOW? (see Chapter 2 ) via just in time documentation aligned with participants goal to support participant engagement, adding greater specificity and choice over which game patterns participants implement. This adaptation help greater alignment with research on the interdependence of flow experience and possibilities for social identity development [@mao_optimal_2016].
 
 LINK BACK TO NEW MODEL OF DESIGN BUILD TEST IN CHAPTER 5.
 Signposting to Chapter 7.
@@ -1311,3 +1334,5 @@ In many of the outlined uses of GDPs in chapter we can see processes at play tha
 This approach is aligned to inductive research processes. Finding useful abstractions only after immersing ones-self in the detail. Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation.
 
 [^1]: https://3m.flossmanuals.net/#game-mechanic-add-moving-enemies
+
+[^3p]: An analogy can be drawn between these three planes of analysis and the examination of activity systems at varying scopes. Specifically, the cultural plane aligns with the community scope of activity described in Figure 5.x in the previous chapter, while the interpersonal and personal planes correspond to smaller scopes depicted in Figure 5.x.
