--- a/_posts/thesis_chapters/2025-6-6-Gdps_v1.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v1.md
@@ -10,7 +10,6 @@ number-sections: true
 categories: chapter
 title:  6. Findings - Game Design Patterns
 ---
-
 -   [Findings: Game Design Patterns](#findings-game-design-patterns)
     -   [Research Questions April 2025](#research-questions-april-2025)
     -   [Introduction](#introduction)
@@ -37,10 +36,9 @@ title:  6. Findings - Game Design Patterns
         -   [The propagation and evolution of GDPs
             concepts](#the-propagation-and-evolution-of-gdps-concepts)
     -   [Discussion](#discussion)
-        -   [Addressing the use of GDPs in relation to theoretical
-            understandings of processes of mediation and expanded
-            objects of activity
-            -](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-expanded-objects-of-activity--)
+        -   [Addressing the use of GDPs in relation to understanding
+            representing the processes of mediation
+            process](#addressing-the-use-of-gdps-in-relation-to-understanding-representing-the-processes-of-mediation-process)
         -   [Expanded object in terms of motivation - fluency towards
             agency](#expanded-object-in-terms-of-motivation---fluency-towards-agency)
     -   [Conclusion](#conclusion)
@@ -343,7 +341,7 @@ The implementation of Madiha(p) chosen GDPs drives the development of these tech
 
 GDPs also functioned a container for structured project stages, facilitating the initial use of procedures as illustrated in this section using the example of code patching. Code patching is a professional technical process to scaffold the application of new features in computer programming (see Glossary and Chapter 2). This patching process became an important element of documentation. Although code was provided, mistakes occurred in practice and additional customisations were introduced. Video evidence and observational journal notes highlight the potential of coupling code implementation with target behaviour, structured within a framework of GDPs.
 
-DROP THIS - HOW DO DO IT? 
+DROP THIS - HOW DO DO IT?
 The following extract from Vignette 1 shows an example of code patching in practice.  This vignette extract is included to show both the technical process of code patching explored here and the process of accessing documentation covered in the following section on guided participation.
 
 INSERT SHORTER VIGNETTE HERE. ADD ONE WITH TIMED DETAIL?
