--- a/_posts/thesis_chapters/tocs/2025-6-5-Design_v14.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-6-5-Design_v14.md_toc.md
@@ -1,12 +1,14 @@
 -   [Findings: Design Narrative](#findings-design-narrative)
     -   [Chapter introduction](#chapter-introduction)
-    -   [Vignette and activity system
-        analysis](#vignette-and-activity-system-analysis)
+    -   [Vignette (and activity system
+        analysis)](#vignette-and-activity-system-analysis)
+        -   [Diagrammatic representations - Drop, move or
+            keep?](#diagrammatic-representations---drop-move-or-keep)
         -   [Framing of GDPs as a germ cell concept - JUST MOVED
             HERE](#framing-of-gdps-as-a-germ-cell-concept---just-moved-here)
     -   [Narrative exploration of key areas of contradictions emerging
-        in the game-making learning design (in P1
-        /P2?)](#narrative-exploration-of-key-areas-of-contradictions-emerging-in-the-game-making-learning-design-in-p1-p2)
+        in the game-making learning
+        design](#narrative-exploration-of-key-areas-of-contradictions-emerging-in-the-game-making-learning-design)
         -   [Contradiction area 1: involving organisational issues and
             the use of game programming and asset authoring
             tools](#contradiction-area-1-involving-organisational-issues-and-the-use-of-game-programming-and-asset-authoring-tools)
@@ -15,9 +17,7 @@
             -   [Surfaced tensions and framed
                 contradiction](#surfaced-tensions-and-framed-contradiction)
             -   [Design response](#design-response)
-        -   [Technical description of the core toolset used for P2 and
-            P3](#technical-description-of-the-core-toolset-used-for-p2-and-p3)
-            -   [Brief Analysis](#brief-analysis)
+                -   [Brief Analysis](#brief-analysis)
         -   [Contradiction area 2: contradictions associated with
             project navigation and use of
             documentation](#contradiction-area-2-contradictions-associated-with-project-navigation-and-use-of-documentation)
@@ -36,11 +36,11 @@
             activity](#contradiction-area-3-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
             -   [Description of what
                 happened](#description-of-what-happened-2)
-            -   [Surfaced tensions and framed
-                contradiction](#surfaced-tensions-and-framed-contradiction-2)
+            -   [Surfaced tensions, barriers and resulting
+                contradiction](#surfaced-tensions-barriers-and-resulting-contradiction)
             -   [Design response](#design-response-2)
-                -   [Social coding processes via
-                    playtesting](#social-coding-processes-via-playtesting)
+                -   [Social coding processes via playtesting (and maker
+                    types)](#social-coding-processes-via-playtesting-and-maker-types)
                 -   [Use of side missions to encourage varied creative
                     practices](#use-of-side-missions-to-encourage-varied-creative-practices)
             -   [Brief Analysis](#brief-analysis-2)
@@ -49,8 +49,8 @@
             concept of
             GDPs](#a-staged-based-approach-structured-around-a-germ-cell-concept-of-gdps)
         -   [Analysis and discussion in relation to existing research -
-            UMC, half-baked, and constructionist
-            heuristics](#analysis-and-discussion-in-relation-to-existing-research---umc-half-baked-and-constructionist-heuristics)
+            half-baked, and constructionist
+            heuristics](#analysis-and-discussion-in-relation-to-existing-research---half-baked-and-constructionist-heuristics)
             -   [Harbour metaphor](#harbour-metaphor)
         -   [Chapter conclusion](#chapter-conclusion)
     -   [Footnotes](#footnotes)
