restructuring last section

--- a/_posts/thesis_chapters/2025-6-5-Design_v15.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v15.md
@@ -570,25 +570,41 @@ Harbour walls prevent large waves from entering but also provide gaps allowing m
 
 ### Chapter conclusion
 
-**Summary of chapter CHAT and DBR concepts and a table of tensions**
+- summary of methodology
+- results
+- signposting
+
+**methodology**
 
 This chapter has explored the complexity of the interacting tools and documentation in relation to their evolution in different phases of the formative intervention process.
 
-The contradictions explored initially focused on technical and then more social dimensions of the learning design.
 
-The process which surfaced some of the barriers to achieving the varied competencies needed to complete the text coding of a game project.
+Regarding methodology,  the the process of describing the design via design narrative, this process been so extensive we could refer to it as a design voyage.
+
+The emergent and mutual nature of this design process aligns with both DBR principles and CHAT concepts of transformational agency by double stimulation (TADS). Specifically, transformation in tool use based on explicit and implicit feedback.
+
+The design approach that followed the moments of contraction outlined above  was responsive and uncertain. The process requiring me to rapidly generate and adapt software, documentation and processes in response to rapid identification and analysis of manifestations of emerging conflicts.  
+
+The descriptions of this chapter also show the process to be demanding on participants. I was fortunate that the tenacious character of the participants in P1 helped mitigate the challenges posed by the challenges introduced incomplete design.
+
+The design narrative above has acknowledges my active input into the direction of the process in line with an active approach to steering  the design towards collaborative learning opportunities [maybe footnote] [@stetsenko2020radical]. My reflective analysis within journal entries show that While this general direction was present from early stages, my this on-going process served a purpose to divine a deeper understanding of my own guiding motivations driving the design changes [^46].
+
 
 This chapter has described three contradictions that occurred during an iterative, phase-based approach using a methodology guided by techniques of DBR and CHAT.
+The contradictions explored initially focused on technical and then more social dimensions of the learning design.
 
-IT'S BEEN SO EXTENSIVE WE COULD REFER TO IT AS A DESIGN VOYAGE!
+**Results**
+Turing to a sumary of the results of the process,
 
-Table 5.2 shows a summary of some of the tensions and design resolutions that emerged from the process.
+The use of a design narrative processes informed by  DBR practice [@hoadley_creating_2002] has been employed to share detailed and replicable approach . With that aim in mind the following list shares links to currently online and reusable resources [^44].
+
+A further output here is a greater precision of  the barriers, congruencies and tensions involved in achieving the varied competencies needed to complete the text coding of a game project. Table 5.2 shows a summary of some of the tensions and design resolutions that emerged from the process.
 
 INSERT TABLE OF THE DESIGN FACTORS.
 
 Table 5.2- Table of emerging tensions and design responses
 
-The use of a design narrative processes informed by  DBR practice [@hoadley_creating_2002] has been employed to share detailed and replicable approach . With that aim in mind the following list shares links to currently online and reusable resources [^44].
+
 
 - P2-3 Starting Game Template: https://codepen.io/mrmick/pen/gbaOEgB?editors=0010
 - Menu of GDPs: https://jamm-labs.github.io/ggcp/ggc-examples/
@@ -598,16 +614,10 @@ The use of a design narrative processes informed by  DBR practice [@hoadley_crea
 
 My observations, supported in the following chapter, indicate that the combination of the use of a template and a collection of GDPs accelerates the use of certain coding fluency practices, which, in turn, had a subsequent impact on the increased use of social coding processes.
 
+**Signposting**
 IS THIS PART ON AGENCY REALLY NEEDED
 At this point it is useful to describe a process here briefly  in relation to the three contradictions explored above [^45]. The evolution of these tools and documentation outlined in C1 and C2  was driven by a need to increase in instrumental agency due to the novice status of participants. As instrumental proficiency increased for some participants it allowed the development of peer learning and other social coding processes to emerge as described in C3.  
 
-The emergent and mutual nature of this design process aligns with both DBR principles and CHAT concepts of transformational agency by double stimulation (TADS). Specifically, transformation in tool use based on explicit and implicit feedback.
-
-The design approach that followed the moments of contraction outlined above  was responsive and uncertain. The process requiring me to rapidly generate and adapt software, documentation and processes in response to rapid identification and analysis of manifestations of emerging conflicts.  
-
-The descriptions of this chapter also show the process to be demanding on participants. I was fortunate that the tenacious character of the participants in P1 helped mitigate the challenges posed by the challenges introduced incomplete design.
-
-The design narrative above has acknowledges my active input into the direction of the process in line with an active approach to steering  the design towards collaborative learning opportunities [maybe footnote] [@stetsenko2020radical]. My reflective analysis within journal entries show that While this general direction was present from early stages, my this on-going process served a purpose to divine a deeper understanding of my own guiding motivations driving the design changes [^46].
 
 This chapter has explored the iterative development of the learning design, focusing on resolving barriers to coding and aligning with existing research principles, particularly the use-modify-create (UMC) process and constructionism. It emphasized the potential and challenges of leveraging professional tools within scaffolded environments, underscoring the pivotal role of learner-led design decisions in motivating coding practices and fostering social collaboration. Two key lines of inquiry which illuminate the cultural and social dimensions of game-making are explored in subsequent chapters. Chapter 7 examines the impact of emerging community processes on participants’ agency, while the Chapter 6 employs video data to describe and analyse the diverse applications of GDPs.
 
